benchmark improvements